argo-cd/resources/cilium_network_policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argo-cd
  namespace: argo-system
spec:
  endpointSelector:
    matchLabels:
      app: argocd-server
  ingress:
  - toPorts:
    - ports:
      - port: "443"
